[metadata]
name = "IdleQuestKnights"
version = "0.1.0"
description = "Knights for the game Quest"
license = "BSD-3-Clause"
license_files = LICENSE
author = Simon Ward
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.7
install_requires =
    numpy
    scipy
packages = find:
package_dir =
    =.

[options.packages.find]
where = .