[metadata]
name = IdleKnights
version = attr: IdleKnights..__version__.__version__
description = Knights for the game Quest
license = BSD-3-Clause
license_files = LICENSE
author = Simon Ward
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.8
install_requires =
    numpy
    scipy
package_dir=
    =.
packages=find:

[options.packages.find]
where=.

[options.extras_require]
full =
    quest @ git+https://github.com/nvaytet/quest.git@main#egg=quest